--- a/POSMGP/POSMGP/POSMGP.csproj
+++ b/POSMGP/POSMGP/POSMGP.csproj
@@ -62,6 +62,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="encryptText.cs" />
+    <Compile Include="Model\ContactNumberModel.cs" />
     <Compile Include="Model\LoginModel.cs" />
     <Compile Include="Model\PosModel.cs" />
     <Compile Include="Model\ProductsModel.cs" />
